added tables to quiz result page